--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,73 @@
 
 @font-face {
   font-family: 'Styleboy';
-  src: url('../src/assets/Styleboy ITC Std Regular.otf') format('opentype');
+  src: url('./assets/Styleboy ITC Std Regular.otf') format('opentype');
   font-weight: normal;
   font-style: normal;
+}
+
+/* Proxima Nova Regular */
+@font-face {
+  font-family: 'Proxima Nova';
+  src: url('./assets/proxima-nova/proximanova_regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+/* Proxima Nova Light */
+@font-face {
+  font-family: 'Proxima Nova';
+  src: url('./assets/proxima-nova/proximanova_light.otf') format('opentype');
+  font-weight: 300;
+  font-style: normal;
+}
+
+/* Proxima Nova Bold */
+@font-face {
+  font-family: 'Proxima Nova';
+  src: url('./assets/proxima-nova/proximanova_bold.otf') format('opentype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+/* Proxima Nova Bold Italic */
+@font-face {
+  font-family: 'Proxima Nova';
+  src: url('./assets/proxima-nova/proximanova_boldit.otf') format('opentype');
+  font-weight: 700;
+  font-style: italic;
+}
+
+/* Proxima Nova Extra Bold */
+@font-face {
+  font-family: 'Proxima Nova';
+  src: url('./assets/proxima-nova/proximanova_extrabold.otf') format('opentype');
+  font-weight: 800;
+  font-style: normal;
+}
+
+/* Proxima Nova Black */
+@font-face {
+  font-family: 'Proxima Nova';
+  src: url('./assets/proxima-nova/proximanova_black.otf') format('opentype');
+  font-weight: 900;
+  font-style: normal;
+}
+
+/* Proxima Nova Black (TTF version) */
+@font-face {
+  font-family: 'Proxima Nova';
+  src: url('./assets/proxima-nova/proximanova_black.ttf') format('truetype');
+  font-weight: 900;
+  font-style: normal;
+}
+
+/* Proxima Nova Black Italic */
+@font-face {
+  font-family: 'Proxima Nova';
+  src: url('./assets/proxima-nova/proximanova_blackit.otf') format('opentype');
+  font-weight: 900;
+  font-style: italic;
 }
 
 :root {
@@ -17,7 +81,7 @@
   --g-border-radius-l: 18px;
   --g-border-radius-xl: 22px;
 
-  --g-font-family-sans: 'Styleboy';
+  --g-font-family-sans: 'proxima-nova';
   /* --g-font-family-sans: 'Emilys Candy'; */
   --g-font-family-monospace: 'Bungee Spice';
 
@@ -175,4 +239,41 @@ body {
 
 .themed-selection:hover {
   background-color: var(--g-color-base-selection-hover);
+}
+
+/* Chinese class using Styleboy font */
+.chinese {
+  font-family: 'Styleboy', var(--g-font-family-sans), -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+}
+
+/* Light weight */
+.light-text {
+  font-family: 'Proxima Nova', sans-serif;
+  font-weight: 300;
+}
+
+/* Regular weight */
+.regular-text {
+  font-family: 'Proxima Nova', sans-serif;
+  font-weight: 400;
+}
+
+/* Bold weight */
+.bold-text {
+  font-family: 'Proxima Nova', sans-serif;
+  font-weight: 700;
+}
+
+/* Extra bold weight */
+.extra-bold-text {
+  font-family: 'Proxima Nova', sans-serif;
+  font-weight: 800;
+}
+
+/* Black weight */
+.black-text {
+  font-family: 'Proxima Nova', sans-serif;
+  font-weight: 900;
 }
