--- a/src/index.css
+++ b/src/index.css
@@ -164,6 +164,7 @@
 }
 
 body {
+  overflow: hidden;
   margin: 0;
   font-family: var(--g-font-family-sans), -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
     'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
