--- a/src/components/starring-banner.css
+++ b/src/components/starring-banner.css
@@ -1,3 +1,8 @@
+:root {
+  --panda-primary: #cc112c
+  --panda-secondary: #e80029
+}
+
 .hoc-wt {
   position: relative;
   height: 100vh;
@@ -7,6 +12,7 @@
   background-color: #cc112c;
   font-family: 'proxima-nova', Arial, sans-serif;
 }
+
 
 .hoc-wt img {
   max-width: unset !important;
